--- a/setup.cfg
+++ b/setup.cfg
@@ -2,5 +2,5 @@
 ignore = W503, RST900, S322, WPS305
 inline-quotes = "
 per-file-ignores =
-    tests/*.py: S101, WPS218, WPS433, WPS442, WPS430
+    tests/*.py: S101, WPS218, WPS433, WPS442, WPS430, WPS436
 exclude = venv*
