Use Numpy docstring style.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,6 @@ inline-quotes = "
 per-file-ignores =
     tests/*.py: S101, WPS218, WPS433, WPS442, WPS430, WPS436
 exclude = venv*
+
+[darglint]
+docstring_style=numpy
