Test email notification

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ install:
 script:
   - pytest
   - mypy .
+notifications:
+  email:
+    on_success: always # default: change
+    on_failure: always # default: always
